--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Hello people!
 
-I've started learning python, since a few months,
+I've been learning python, since a few months,
 built some CRUD projects with flask
 looking to gain some experience by working with real projects.
 
