--- a/README
+++ b/README
@@ -4,4 +4,5 @@ I've been learning python, since a few months,
 built some CRUD projects with flask
 looking to gain some experience by working with real projects.
 
-anything I can help with let me know
+anything I can help with,
+let me know
